--- a/style.css
+++ b/style.css
@@ -1,41 +1,71 @@
-body {
-    background-color: rgb(0, 0, 0);
-    color: rgb(248, 246, 242);
-    font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+body{
+    background-color: rgba(2, 2, 2, 0.897);
+    color: rgba(255, 255, 255, 0.76);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1em;
+    text-align: justify;
 }
 
-a {
-    color: rgba(37, 183, 241, 0.658);
-    text-decoration: none;
-    font-weight: bold;
+header{
+    
 }
 
-ul {
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    padding: 20px;
-}
-
-img{
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    border: 2px solid rgba(99, 172, 221, 0.616);
-}
-
-.center {
-    text-align: center;
+h1{
+    color: rgba(223, 219, 3, 0.89);
+    margin: 0%;
+    
 }
 
 h2{
-    font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0%;
+    font-size: 1.1em;
 }
 
-.container{
-    padding: 0px, 50px;
-    text-align: center;
+ul{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: flex; /*deixar os itens, um no lado do outro*/
+    justify-content: space-between;
+    list-style-type: none; /*tirar as bolinhas da lista*/
+    padding: 3px;
+    font-weight: bold;
 }
-a:hover{
-    color: rgb(22, 208, 214);
+
+a{
+    color: rgba(252, 248, 53, 0.714);
+    text-decoration: none; /*tirar o sblinhado do link*/
+}
+
+img{
+    width: 140px;
+    height:142px;
+    text-align: center;
+    border-radius: 50%;
+}
+
+.center{
+    text-align: center;
+    
+}
+
+
+.linkedin {
+    width: 17px;
+    height: 17px;
+}
+.git{
+    width: 17px;
+    height: 17px;
+}
+
+.insta{
+    width: 14px;
+    height: 14px;
+}
+
+footer{
+    background-color: black;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    text-align: center;
+
 }
